--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <header>
       <div>
         <h1>Prompt Collection — Categorized</h1>
-        <p class="lead">Tap "Copy" to copy the prompt to your clipboard. For reliable copying, host the file via HTTPS (e.g., SharePoint/OneDrive).</p>
+        <p class="lead">Tap "Copy" to copy the prompt to your clipboard.</p>
       </div>
     </header>
 
