--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ const PROMPTS = [
   { id:13, category: "Working outlook in the future of process analysis", prompt: "Have there been times where the machine was in production status, but the width controller was off?" },
   { id:14, category: "Working outlook in the future of process analysis", prompt: "Have there been times last week when the machine was in production, but the thickness control was off?" },
 
-  { id:15, category: "For the brave – Special prompt for outliners. Sometimes only works on the second or third try.", prompt: "Search yesterdays data for z-score outliners in the actual thickness, actual width and thickness deviation." },
-  { id:16, category: "For the brave – Special prompt for outliners. Sometimes only works on the second or third try.", prompt: "Search last weeks data for z-score outliners in the actual thickness, actual width and thickness deviation inside. Combine related time periods. Create a table." }
+  { id:15, category: "For the enthusiast – Special prompt for outliners. Sometimes only works on the second or third try.", prompt: "Search yesterdays data for z-score outliners in the actual thickness, actual width and thickness deviation." },
+  { id:16, category: "For the enthusiast – Special prompt for outliners. Sometimes only works on the second or third try.", prompt: "Search last weeks data for z-score outliners in the actual thickness, actual width and thickness deviation inside. Combine related time periods. Create a table." }
 ];
 
 /* Utilities */
